<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Main!</string>
    <string name="app_name">Chooser Lite</string>
    <string name="confirmButton">Confirm</string>
    <string name="numChoicesDialogTitle">Number of choices</string>
    <string name="chooseButton">Choose!</string>
    <string name="newOption">Add new option</string>
    <string name="nameOptionDialogTitle">New option</string>
    <string name="rbNever">Never</string>
    <string name="rbAlmostImpossible">Almost impossible</string>
    <string name="rbNormal">Normal</string>
    <string name="rbAboveNormal">Above normal</string>
    <string name="nameChoiceHint">Name of the option</string>
    <string name="rbSimpleOption">Simple option</string>
    <string name="rbRangeOption">Range of numbers</string>
    <string name="rangeFrom">From</string>
    <string name="rangeTo">To</string>
    <string name="toastRangeError">\'From\' number must be higher than \'To\' number</string>
    <string name="rangeName1">A number from</string>
    <string name="rangeName2">to</string>
    <string name="titleResult">Results</string>
    <string name="btnResultBack">Back</string>
    <string name="btnResultExit">Exit</string>
    <string-array name="favoritesSelectionDialog">
        <item>Edit name</item>
        <item>Remove</item>
    </string-array>
    <string name="btnCancel">Cancel</string>
    <string name="editNameTitle">Edit name</string>
    <string name="proDialogTitle">Go PRO!</string>
    <string name="proDialogMessage">Chooser Lite version is limited to three positions. You can upgrade 
    								to PRO version to remove the limit.</string>
    <string name="proDialogCancel">Not now</string>
    <string name="proDialogOK">Upgrade now!</string>
</resources>
