<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <LinearLayout 
    	android:layout_height="fill_parent" 
    	android:id="@+id/wrapperResult" 
    	android:layout_width="wrap_content"
    	android:visibility="gone"
    	android:orientation="vertical">
        <LinearLayout 
        	android:layout_height="50dp" 
        	android:id="@+id/adLayout" 
        	android:gravity="center_vertical|center_horizontal" 
        	android:layout_width="320dp">
        </LinearLayout>
        <LinearLayout
        	android:layout_height="fill_parent" 
        	android:layout_width="fill_parent"
        	android:weightSum="100"
        	android:orientation="vertical">
	        <TextView 
	        	android:layout_gravity="center_horizontal" 
	        	android:layout_height="0dp" 
	        	android:layout_width="wrap_content" 
	        	android:id="@+id/titleResult" 
	        	android:text="@string/titleResult" 
	        	android:textSize="50sp" 
	        	android:layout_weight="25"
	        	android:layout_marginTop="15dp"
	        	android:layout_marginBottom="15dp">
	        </TextView>
	        <ListView 
	        	android:layout_height="0dp" 
	        	android:id="@+id/resultList" 
	        	android:layout_width="fill_parent" 
	        	android:layout_weight="55"
	        	android:background="#ff888888"
	        	>
	        </ListView>
	        <LinearLayout
		        android:layout_height="0dp" 
	        	android:layout_width="fill_parent"
	        	android:weightSum="100"
	        	android:orientation="horizontal"
	        	android:layout_weight="20">
	            <Button 
	            	android:text="@string/btnResultBack" 
	            	android:id="@+id/btnResultLeft" 
	            	android:layout_width="0dp" 
	            	android:layout_height="fill_parent"
	            	android:layout_weight="50"
	            	>
	            </Button>
	            <Button 
	            	android:text="@string/btnResultExit" 
	            	android:id="@+id/btnResultRight" 
	            	android:layout_width="0dp"
	            	android:layout_height="fill_parent"
	            	android:layout_weight="50"
	            	>
	            </Button>
	        </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
    	android:layout_height="fill_parent" 
    	android:id="@+id/wrapperAnimation" 
    	android:layout_width="wrap_content"
    	android:orientation="vertical">
        <TextSwitcher 
        	android:layout_centerInParent="true"
        	android:layout_width="fill_parent" 
        	android:layout_height="wrap_content" 
        	android:id="@+id/resultTextSwitcher" 
        	android:inAnimation="@android:anim/fade_in"
        	android:outAnimation="@android:anim/fade_out">
        	</TextSwitcher>
    	
    </RelativeLayout>
</LinearLayout>
